<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.application.testapplication.ui.model.data.AccountAttributeModel" />

        <import type="android.view.View"/>

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardElevation="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/lbl_subscription_detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/app_start_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/DetailLabelStyle"
                    android:text="@{String.format(@string/lbl_sub_balance, data.balance)}" />

                <TextView
                    style="@style/DetailLabelStyle"
                    android:text="@{String.format(@string/lbl_sub_expiry, data.expiryDate)}" />

                <TextView
                    style="@style/DetailLabelStyle"
                    android:visibility="@{data.autoRenewal ? View.VISIBLE : View.GONE}"
                    android:text="@string/msg_auto_renewal"/>

                <TextView
                    style="@style/DetailLabelStyle"
                    android:visibility="@{data.primarySubscription ? View.VISIBLE : View.GONE}"
                    android:text="@string/msg_primary_subscription"/>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>