<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.application.testapplication.ui.model.view.LoginViewModel" />

        <import type="android.view.View" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_8"
            app:cardCornerRadius="@dimen/dp_6"
            app:cardElevation="@dimen/dp_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lbl_login"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fnt_ms" />

                <!--  <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColorHint="@android:color/darker_gray"
                      android:hint="@string/hint_enter_login_id"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/fnt_sx"
                      android:text="@={viewModel.loginId}"/>-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/hint_enter_login_id"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@null"
                    android:inputType="numberPassword"
                    android:text="@={viewModel.loginId}"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/fnt_sx" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:text="@string/err_msg_invalid_login_id"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/fnt_sl"
                    android:visibility="@{viewModel.error ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="@{()->viewModel.onLoginButtonClick()}"
                    android:paddingBottom="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_16"
                    android:paddingStart="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/btn_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fnt_sx"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

</layout>